@@ -63,6 +63,7 @@ extern NSString * MA_Field_CreatedDate;
 	NSMutableDictionary * articleData;
 	NSMutableArray * commentsArray;
 	BOOL readFlag;
+	BOOL revisedFlag;
 	BOOL markedFlag;
 	BOOL deletedFlag;
 	int status;
@@ -82,6 +83,7 @@ extern NSString * MA_Field_CreatedDate;
 -(Folder *)containingFolder;
 -(int)folderId;
 -(BOOL)isRead;
+-(BOOL)isRevised;
 -(BOOL)isFlagged;
 -(BOOL)isDeleted;
 -(BOOL)hasComments;
@@ -98,6 +100,7 @@ extern NSString * MA_Field_CreatedDate;
 -(void)setSummary:(NSString *)newSummary;
 -(void)setStatus:(int)newStatus;
 -(void)markRead:(BOOL)flag;
+-(void)markRevised:(BOOL)flag;
 -(void)markFlagged:(BOOL)flag;
 -(void)markDeleted:(BOOL)flag;
 -(NSDictionary *)articleData;
